--- a/css/style.css
+++ b/css/style.css
@@ -17,8 +17,8 @@
 }
 
 body {
-  width: 1440px;
-  margin: 0 auto;
+  margin: 0;
+  padding: 0;
 
   font-weight: 300;
   font-size: 15px;
@@ -239,29 +239,27 @@ input[type="search"]:focus {
 
   background-color: #f7e296;
   border: 2px solid #f7e296;
-  cursor: pointer;
+  outline: none;
 }
 
 input[type="search"]:focus + button {
   color: #000;
 
   border-color: #000;
+
+  cursor: pointer;
 }
 
-.search-form .btn-search:hover {
+input[type="search"]:focus + button:hover {
   color: rgba(255, 255, 255, 1);
 
   background-color: #000;
 }
 
-.search-form .btn-search:active {
+.btn-search:active {
   color: rgba(255, 255, 255, 0.3);
-}
 
-.btn-search:focus {
-  color: #000;
-
-  border-color: #000;
+  background-color: #000;
 }
 
 .user-menu {
@@ -274,7 +272,6 @@ input[type="search"]:focus + button {
 }
 
 .user-menu-item {
-  /*  position: relative;*/
   margin-right: 0;
   margin-left: 40px;
   padding-left: 21px;
@@ -283,7 +280,7 @@ input[type="search"]:focus + button {
 .user-menu-item:nth-child(1) {
   margin-left: 0;
   margin-right: 20px;
-  padding-left: 25px;
+  padding-left: 27px;
 }
 
 .user-menu-item:nth-child(2) {
@@ -303,22 +300,29 @@ header .user-menu-item:nth-child(3) {
   content: "";
 
   position: absolute;
-  top: -1px;
-  left: -29px;
 
   width: 20px;
   height: 20px;
 }
 
 .user-menu-item:nth-child(1) .link-user-menu::before {
+  top: -1px;
+  left: -29px;
+
   background: url("../img/user.svg") no-repeat center;
 }
 
 .user-menu-item:nth-child(3) .link-user-menu::before {
+  top: 0px;
+  left: -27px;
+
   background: url("../img/compare.svg") no-repeat center;
 }
 
 .user-menu-item:nth-child(4) .link-user-menu::before {
+  top: -1px;
+  left: -26px;
+
   background: url("../img/cart.svg") no-repeat center;
 }
 
@@ -350,11 +354,11 @@ header .user-menu-item:nth-child(3) {
 }
 
 .main-menu-item:nth-child(3) {
-  margin-left: 30px;
+  margin-left: 34px;
   margin-right: 105px;
 }
 
-.main-menu-item:nth-child(4) {
+header .main-menu-item:nth-child(4) {
   margin: 0;
 }
 
@@ -364,6 +368,18 @@ header .user-menu-item:nth-child(3) {
   position: absolute;
   right: -29px;
   top: 1px;
+}
+
+.main-header .main-menu-item:nth-child(1)::before {
+  content: "";
+
+  position: absolute;
+  bottom: -20px;
+
+  width: 400px;
+  height: 20px;
+
+  outline: 1px solid #000;
 }
 
 .main-menu-item:first-child:hover .sub-menu-list,
@@ -441,9 +457,9 @@ header .user-menu-item:nth-child(3) {
 
 .promo-column:first-child {
   width: 530px;
+  min-height: 486px;
   margin-right: 50px;
 }
-
 
 .promo-column:first-child img {
   margin: auto;
@@ -520,11 +536,13 @@ header .user-menu-item:nth-child(3) {
 }
 
 .promo .content {
-  margin-bottom: 40px;
+  margin-bottom: 43px;
+
+  letter-spacing: 0.02em;
 }
 
 .promo .btn {
-  margin-bottom: 50px;
+  margin-bottom: 47px;
 }
 
 .product-properties .value {
@@ -544,13 +562,14 @@ header .user-menu-item:nth-child(3) {
 }
 
 .product-properties td {
-  width: 152px;
+  width: 154px;
+  padding-bottom: 5px;
 
   outline: 1px solid blue;
 }
 
 .product-properties td:nth-child(2) {
-  width: 135px;
+  width: 134px;
 }
 
 .promo-active {
@@ -606,8 +625,9 @@ header .user-menu-item:nth-child(3) {
 }
 
 .popular-product .link {
-  letter-spacing: 0.01em;
-  text-transform: inherit;
+  line-height: 23px;
+  letter-spacing: 0.02em;
+  text-transform: none;
 }
 
 .popular-product-item .link::before,
@@ -631,27 +651,44 @@ header .user-menu-item:nth-child(3) {
 }
 
 .popular-product-item:nth-child(1) .link::after {
+  bottom: 87px;
+  left: 2px;
+
   background-image: url("../img/popular-1.svg");
 }
 
 .popular-product-item:nth-child(2) .link::after {
   background-image: url("../img/popular-2.svg");
-  background-position: bottom;
+
+  bottom: 69px;
+  left: 4px;
 }
 
 .popular-product-item:nth-child(3) .link::after {
+  bottom: 86px;
+  left: 6px;
+
   background-image: url("../img/popular-3.svg");
 }
 
 .popular-product-item:nth-child(4) .link::after {
+  bottom: 86px;
+  left: 3px;
+
   background-image: url("../img/popular-4.svg");
 }
 
 .popular-product-item:nth-child(5) .link::after {
+  bottom: 86px;
+  left: 3px;
+
   background-image: url("../img/popular-5.svg");
 }
 
 .popular-product-item:nth-child(6) .link::after {
+  bottom: 85px;
+  left: 1px;
+
   background-image: url("../img/popular-6.svg");
 }
 
@@ -816,7 +853,7 @@ header .user-menu-item:nth-child(3) {
 .about-us {
   width: 560px;
   margin-right: 40px;
-  padding-bottom: 90px;
+  padding-bottom: 83px;
 }
 
 .about-us .section-title,
@@ -831,7 +868,11 @@ header .user-menu-item:nth-child(3) {
 }
 
 .about-us .content {
+  width: 484px;
   margin-bottom: 30px;
+
+  line-height: 30px;
+  letter-spacing: 0.01em;
 }
 
 .about-us .content:nth-of-type(2) {
@@ -893,7 +934,8 @@ header .user-menu-item:nth-child(3) {
 /**************************************************************/
 
 .main-footer {
-  padding-top: 51px;
+  margin: 0 auto;
+  padding-top: 58px;
   padding-bottom: 65px;
 
   color: #fff;
@@ -911,6 +953,9 @@ header .user-menu-item:nth-child(3) {
 
 .main-footer .content {
   color: inherit;
+
+  line-height: 30px;
+  letter-spacing: 0.03em;
 }
 
 .footer-top,
@@ -918,6 +963,7 @@ header .user-menu-item:nth-child(3) {
 .footer-bottom {
   width: 1160px;
   margin: 0 auto;
+  padding: 0 20px;
 
   outline: 1px solid red;
 }
@@ -925,12 +971,12 @@ header .user-menu-item:nth-child(3) {
 .footer-top {
   display: flex;
   justify-content: space-between;
-  align-items: center;
-  margin-bottom: 28px;
+  margin-bottom: 23px;
 }
 
 .main-footer .logo {
   margin: 0;
+  margin-left: -2px;
 
   color: #ffc600;
 }
@@ -938,6 +984,7 @@ header .user-menu-item:nth-child(3) {
 .main-footer .user-menu {
   flex-grow: 0;
   min-width: 320px;
+  padding-top: 4px;
 }
 
 .main-footer .user-menu-item:nth-child(1) {
@@ -945,8 +992,8 @@ header .user-menu-item:nth-child(3) {
 }
 
 .main-footer .user-menu-item:nth-child(2) {
-  margin-right: 40px;
-  margin-left: 15px;
+  margin-right: 63px;
+  margin-left: 20px;
 }
 
 .main-footer .user-menu-item:nth-child(1) .link-user-menu::before {
@@ -1042,15 +1089,12 @@ header .user-menu-item:nth-child(3) {
   display: flex;
 }
 
-/************************************************************************************************************/
-
-[class^="modal"] {
-  display: none;
-}
+/*********************************************************************************************/
 
 .modal-write-us {
   position: relative;
 
+  display: none;
   width: 760px;
   margin: 0 auto;
   padding: 90px 100px;
@@ -1167,6 +1211,7 @@ header .user-menu-item:nth-child(3) {
 .modal-map {
   position: relative;
 
+  display: none;
   width: 960px;
   margin: 0 auto;
 
@@ -1177,6 +1222,7 @@ header .user-menu-item:nth-child(3) {
 
 .monopods {
   padding-top: 33px;
+
   background-color: #fff;
 
   outline: 1px solid red;
@@ -1184,13 +1230,12 @@ header .user-menu-item:nth-child(3) {
 
 .monopods-container {
   display: flex;
-  flex-wrap: wrap;
-  /*  padding-top: 40px;*/
+  justify-content: center;
 }
 
 .monopods .section-title {
   margin-bottom: 20px;
-  margin-left: 200px;
+  margin-left: 60px;
 
   outline: 1px solid red;
 }
@@ -1201,8 +1246,8 @@ header .user-menu-item:nth-child(3) {
 
 .breadcrumbs-list {
   display: flex;
-  margin-bottom: 45px;
-  margin-left: 200px;
+  margin-bottom: 47px;
+  margin-left: 60px;
 }
 
 .breadcrumbs-item {
@@ -1229,6 +1274,10 @@ header .user-menu-item:nth-child(3) {
   transform: rotate(45deg);
 }
 
+.breadcrumbs-item:nth-child(2)::after {
+  right: 16px;
+}
+
 .breadcrumbs-item:nth-child(3)::after {
   display: none;
 }
@@ -1248,9 +1297,9 @@ header .user-menu-item:nth-child(3) {
 
 .filter {
   width: 268px;
-  padding-top: 22px;
-  padding-left: 200px;
-
+  padding-top: 21px;
+  padding-left: 80px;
+  /*  margin-left: auto;*/
   background-image: linear-gradient(to bottom, #dbdbdb 70px, #eee 70px);
 
   outline: 1px solid red;
@@ -1264,7 +1313,7 @@ header .user-menu-item:nth-child(3) {
   font-size: 16px;
   line-height: 24px;
   font-family: "Gilroy", "Arial", sans-serif;
-  letter-spacing: 0.2em;
+  letter-spacing: 0.23em;
   text-decoration: none;
   text-transform: uppercase;
   color: #000;
@@ -1397,7 +1446,7 @@ fieldset:nth-child(3) .catalog-title {
 
   position: absolute;
   top: -2px;
-  left: -2px;
+  left: 1px;
 
   width: 23px;
   height: 23px;
@@ -1414,7 +1463,7 @@ fieldset:nth-child(3) .catalog-title {
 
   position: absolute;
   top: -4px;
-  left: -2px;
+  left: 1px;
 
   width: 25px;
   height: 25px;
@@ -1441,11 +1490,11 @@ fieldset:nth-child(3) .catalog-title {
 .catalog {
   display: flex;
   flex-direction: column;
-  width: 760px;
+  /*  width: 760px;*/
+  /*  margin-right: auto;*/
   /*972-140-70=762   972 - ширина колонки по макету*/
-  margin: 0 auto;
-  padding-top: 16px;
-  padding-right: 140px;
+  padding-top: 13px;
+  padding-right: 20px;
   padding-left: 72px;
 
   background-image: linear-gradient(to bottom, #ebebeb 70px, #fff 70px);
@@ -1464,7 +1513,7 @@ fieldset:nth-child(3) .catalog-title {
 
 .catalog .catalog-title {
   margin: 0;
-  margin-right: 56px;
+  margin-right: 51px;
 }
 
 .sort-type-list {
@@ -1531,7 +1580,8 @@ fieldset:nth-child(3) .catalog-title {
   align-items: baseline;
   width: 360px;
   margin-right: 40px;
-/*  margin-bottom: 35px;*/
+  /*  margin-bottom: 35px;*/
+  margin-bottom: 15px;
 }
 
 .catalog-item:nth-child(2n) {
@@ -1549,15 +1599,16 @@ fieldset:nth-child(3) .catalog-title {
 .catalog-item-title {
   order: 2;
   width: 260px;
-  margin-top: 34px;
-  margin-bottom: 45px;
-  
-  line-height: 24px;
+  margin: 0;
+  margin-top: 35px;
+  margin-bottom: 25px;
+
+  line-height: 23px;
 }
 
 .catalog-item-title .link {
   text-transform: inherit;
-  letter-spacing: 0.01em;  
+  letter-spacing: 0.02em;
 }
 
 .catalog-item-price {
@@ -1607,7 +1658,7 @@ fieldset:nth-child(3) .catalog-title {
 
 .mark-new {
   position: absolute;
-  top: 46px;
+  top: 53px;
   right: 37px;
 
   display: none;
@@ -1643,9 +1694,9 @@ fieldset:nth-child(3) .catalog-title {
 
 .pagination-list {
   display: flex;
-  align-items: baseline;
+/*  align-items: baseline;*/
   margin-bottom: 80px;
-  padding: 0 5px;;
+  padding: 0 5px;
 
   background-color: #ebebeb;
 }
@@ -1676,7 +1727,7 @@ fieldset:nth-child(3) .catalog-title {
 
 .paginator-item .link {
   display: inline-block;
-  padding: 20px 15px;
+  padding: 20px 10px;
 
   font-size: 16px;
   vertical-align: baseline;
